--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -87,7 +87,7 @@ jobs:
           echo "TEST_APP_URL=https://$FQDN" >> $GITHUB_ENV
           echo "TEST_APP_URL=https://$FQDN" 
           curl https://$FQDN/ui
-          sed -i "s,http://localhost:5000,https://$FQDN,g" $GITHUB_WORKSPACE/openapi_specs/openapi3.yml
+          #sed -i "s,http://localhost:5000,https://$FQDN,g" $GITHUB_WORKSPACE/openapi_specs/openapi3.yml
 
           - name: ZAP Scan
           uses: zaproxy/action-api-scan@v0.6.0
@@ -134,7 +134,7 @@ jobs:
           name: test-results
           path: junit/test-results.xml
 
-          
+
   submit_results:
     needs: [build]
     if: true
