--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -44,7 +44,7 @@ jobs:
 
 
   dast:
-    needs: [test, sonarqube]
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
