--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    needs: sonarqube
+    needs: []
     runs-on: ubuntu-latest
     steps:
       -
@@ -23,6 +23,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
+          sbom: true
+          provenance: true
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:latest
   
