--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -4,7 +4,10 @@ on: [push]
 
 jobs:
   build:
-    needs: []
+    # needs: [security_gate]
+    if: true
+    permissions:
+      id-token: write
     runs-on: ubuntu-latest
     steps:
       -
@@ -23,10 +26,19 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
+          push: true
           sbom: true
           provenance: true
-          push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:latest
+      - 
+        name: Install Cosign
+        uses: sigstore/cosign-installer@v3.4.0
+      -
+        name: Sign the image with GitHub OIDC Token
+        env:
+          IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:latest
+        run: |
+          cosign sign --yes ${IMAGE}
   
 
   sonarqube:
